# mlflow-example

./: README.md  docker-compose.yml  pyproject.toml  test.ipynb
example/: features.py  model.py  train.py
